--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost/linepick
 spring.datasource.username=root
-spring.datasource.password=vicky1218
+spring.datasource.password=Candy1040616@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
