--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost/linepick
 spring.datasource.username=root
 spring.datasource.password=Candy1040616@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.hikari.maximum-pool-size: 150
+spring.datasource.hikari.maximum-pool-size: 150
