--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/linepick
 spring.datasource.username=root
-spring.datasource.password=anita890328
+spring.datasource.password=vicky1218
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size: 150
